# chip8-emulator

./: .gitignore  CMakeLists.txt  chip8.c  chip8.h  main.c
chip8-display/: CMakeLists.txt  chip8display.cpp  chip8display.h  chip8display.ui  main.cpp
